--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding-top: 4rem;
+	/* padding-top: 4rem; */
 	min-height: 100vh;
 	padding-left: 1%;
 	padding-right: 1%;
